--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
         "dayjs": "^1.11.7",
         "element-plus": "^2.3.4",
         "pinia": "^2.0.35",
-        "sass": "^1.62.0",
-        "vue": "^3.2.47",
+        "sass": "^1.62.1",
+        "vue": "^3.3.0-beta.2",
         "vue-eslint-parser": "^9.1.1",
         "vue-inline-svg": "^3.0.0-beta.1",
         "vue-router": "^4.1.6",
@@ -26,9 +26,9 @@
     },
     "devDependencies": {
         "@types/clone": "^2.1.1",
-        "@types/node": "^18.16.0",
+        "@types/node": "^18.16.1",
         "@typescript-eslint/eslint-plugin": "^5.59.1",
-        "@vitejs/plugin-vue": "^4.1.0",
+        "@vitejs/plugin-vue": "^4.2.1",
         "@volar/vue-language-plugin-pug": "^1.4.4",
         "eslint": "^8.39.0",
         "eslint-plugin-vue": "^9.11.0",
@@ -37,9 +37,8 @@
         "typescript": "^5.0.4",
         "unplugin-auto-import": "^0.15.3",
         "unplugin-vue-components": "^0.24.1",
-        "vite": "^4.3.1",
+        "vite": "^4.3.3",
         "vite-plugin-style-import": "^2.0.0",
-        "vite-plugin-vue-type-imports": "^0.2.4",
         "vue-tsc": "^1.4.4"
     }
 }
