--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "esModuleInterop": true,
     "baseUrl": ".",
     "types": ["element-plus/global"],
+    "skipLibCheck": true,
     "paths": {
       "@/*": [
         "src/*"
